# configload

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
configload/: __init__.py  configload.py
py_configfile/: __init__.py  py_configfile.py
test/: test.ini  test.json  test.py  test.toml  test.yaml
