[metadata]
license_file = LICENSE
name = configload
version = 0.0.1
author = Noah Pendleton
author_email = 2538614+noahp@users.noreply.github.com
description = install packages and run Python with them
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/noahp/configload
project_urls =
    Code = https://github.com/noahp/configload
    Issue tracker = https://github.com/noahp/configload/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

# using markdown as pypi description:
# https://dustingram.com/articles/2018/03/16/markdown-descriptions-on-pypi
setup_requires =
    setuptools>=38.6.0
    wheel>=0.31.0
    twine>=1.11.0

[options.extras_require]
yaml =
    pyyaml

toml =
    tomlkit
